--- a/WhereamI/app/build.gradle
+++ b/WhereamI/app/build.gradle
@@ -48,5 +48,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    kapt 'com.android.databinding:compiler:3.1.4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    kapt 'androidx.databinding:databinding-compiler:3.6.3'
 }
